Make the name of the controller camelcase in the consent config and change the controller reference in the controller to Vm.
#7178 - Implement create consent UI

--- a/client/app/consent/controllers/consentList.tpl.html
+++ b/client/app/consent/controllers/consentList.tpl.html
@@ -1,3 +1,3 @@
 <content-wrapper title="List Consents">
-    <pp-consent-card-list consent-list="ConsentListVm.consentList"></pp-consent-card-list>
+    <pp-consent-card-list consent-list="consentListVm.consentList"></pp-consent-card-list>
 </content-wrapper>
