--- a/client/app/consent/controllers/consentCreateEdit.tpl.html
+++ b/client/app/consent/controllers/consentCreateEdit.tpl.html
@@ -1,9 +1,9 @@
 
 <content-wrapper title="Create Consent">
         <pp-create-consent
-                providers="ConsentCreateEditVm.providers"
-                purposeofuse="ConsentCreateEditVm.purposeOfUse"
-                medicalsections="ConsentCreateEditVm.medicalSections"
-                sensitivitypolicies="ConsentCreateEditVm.sensitivityPolicies"
-                consent="ConsentCreateEditVm.consent"></pp-create-consent>
+                providers="consentCreateEditVm.providers"
+                purposeofuse="consentCreateEditVm.purposeOfUse"
+                medicalsections="consentCreateEditVm.medicalSections"
+                sensitivitypolicies="consentCreateEditVm.sensitivityPolicies"
+                consent="consentCreateEditVm.consent"></pp-create-consent>
 </content-wrapper>
