--- a/client/app/consent/directives/consentTerm.tpl.html
+++ b/client/app/consent/directives/consentTerm.tpl.html
@@ -6,7 +6,7 @@
         <div class="panel-body">
             <p>Enter a start and end date during wich your medical records will be shared.</p>
 
-            <pp-datepicker-range class="input-daterange"  ng-model="ConsentTermVm.daterange" fromlabel="Consent Start" tolabel="Consent End"></pp-datepicker-range>
+            <pp-datepicker-range class="input-daterange"  ng-model="consentTermVm.daterange" fromlabel="Consent Start" tolabel="Consent End"></pp-datepicker-range>
         </div>
     </div>
 </div>
