--- a/client/app/consent/directives/consentMedicalInformation.tpl.html
+++ b/client/app/consent/directives/consentMedicalInformation.tpl.html
@@ -6,19 +6,19 @@
         <div class="panel-body">
             <p>Select how you would like to share your medical information.</p>
             <div>
-                <p> <input type="radio" icheck class="m-r-xs"  ng-model="medicalInformationVm.medicalInformation" value="A" name="medicalInformation" ng-checked="medicalInformationVm.medicalInformation == 'A'" ng-change="medicalInformationVm.clearMedicalInfoData()"> <span class="m-l-xs"><strong>SHARE ALL</strong> information in my medical record.</span></p>
-                <p> <input type="radio" icheck  ng-model="medicalInformationVm.medicalInformation" value="B"  name="medicalInformation" ng-checked="medicalInformationVm.hasException()" ng-change="medicalInformationVm.openPrivacySettingsModal()">
+                <p> <input type="radio" icheck class="m-r-xs"  ng-model="consentMedicalInformationVm.medicalInformation" value="A" name="medicalInformation" ng-checked="consentMedicalInformationVm.medicalInformation == 'A'" ng-change="consentMedicalInformationVm.clearMedicalInfoData()"> <span class="m-l-xs"><strong>SHARE ALL</strong> information in my medical record.</span></p>
+                <p> <input type="radio" icheck  ng-model="consentMedicalInformationVm.medicalInformation" value="B"  name="medicalInformation" ng-checked="consentMedicalInformationVm.hasException()" ng-change="consentMedicalInformationVm.openPrivacySettingsModal()">
                     <span class="m-l-xs m-r-sm"><strong>SHARE</strong> my medical record <strong>WITH EXCEPTION</strong> of specific information.</span>
-                    <button type="button" class="btn btn-primary btn-xs dark-green"  ng-if="medicalInformationVm.hasException()" ng-click="medicalInformationVm.openPrivacySettingsModal()">Edit</button>
+                    <button type="button" class="btn btn-primary btn-xs dark-green"  ng-if="consentMedicalInformationVm.hasException()" ng-click="consentMedicalInformationVm.openPrivacySettingsModal()">Edit</button>
                 </p>
             </div>
             <div>
-                <div class="label label-info m-l-xs  inline" ng-repeat="medicalSection in medicalInformationVm.selectedMedicalSections">
+                <div class="label label-info m-l-xs  inline" ng-repeat="medicalSection in consentMedicalInformationVm.selectedMedicalSections">
                     <span class="fa fa-lock m-r-xs"></span>
                     <span ng-bind="medicalSection.displayName"> </span>
                 </div>
 
-                <div class="label label-info m-l-xs inline" ng-repeat="SensitivityPolicies in medicalInformationVm.selectedSensitivityPolicies">
+                <div class="label label-info m-l-xs inline" ng-repeat="SensitivityPolicies in consentMedicalInformationVm.selectedSensitivityPolicies">
                     <span class="fa fa-lock m-r-xs" ></span>
                     <span ng-bind="SensitivityPolicies.displayName"> </span>
                 </div>
