--- a/client/app/consent/controllers/consentCreateEdit.tpl.html
+++ b/client/app/consent/controllers/consentCreateEdit.tpl.html
@@ -1,9 +1,9 @@
 
 <content-wrapper title="Create Consent">
-        <pp-create-consent
+        <pp-consent-create
                 providers="consentCreateEditVm.providers"
                 purposeofuse="consentCreateEditVm.purposeOfUse"
                 medicalsections="consentCreateEditVm.medicalSections"
                 sensitivitypolicies="consentCreateEditVm.sensitivityPolicies"
-                consent="consentCreateEditVm.consent"></pp-create-consent>
+                consent="consentCreateEditVm.consent"></pp-consent-create>
 </content-wrapper>
