--- a/client/app/consent/directives/consentCard.tpl.html
+++ b/client/app/consent/directives/consentCard.tpl.html
@@ -1,15 +1,15 @@
 <div class="row">
     <div class="col-lg-12 relative">
-        <div class="ibox panel panel-success float-e-margins" ng-class="{'statusIcon_saved': ConsentCardVm.consentState() === 'saved','statusIcon_signed': ConsentCardVm.consentState() === 'signed','statusIcon_revoked': ConsentCardVm.consentState() === 'revoked'}">
-            <div class="ibox-title navy-blue left-padding55 right-padding30" ng-click="ConsentCardVm.toggleCollapse()">
+        <div class="ibox panel panel-success float-e-margins" ng-class="{'statusIcon_saved': consentCardVm.consentState() === 'saved','statusIcon_signed': consentCardVm.consentState() === 'signed','statusIcon_revoked': consentCardVm.consentState() === 'revoked'}">
+            <div class="ibox-title navy-blue left-padding55 right-padding30" ng-click="consentCardVm.toggleCollapse()">
                 <div class="chevron_absolute">
-                    <div ibox-tools pp-collapsed="ConsentCardVm.collapsed" pp-chevron-prevent-default="true"></div>
+                    <div ibox-tools pp-collapsed="consentCardVm.collapsed" pp-chevron-prevent-default="true"></div>
                 </div>
 
                 <div class="row">
                     <!--<div ibox-tools init-collapsed="true"></div>-->
                     <div class="col-sm-4 col-sm-push-8 col-xs-12">
-                        <p class="">Effective Dates: <strong><span ng-bind="(ConsentCardVm.consent.consentStart | date) + ' - ' + (ConsentCardVm.consent.consentEnd | date)"/></strong>
+                        <p class="">Effective Dates: <strong><span ng-bind="(consentCardVm.consent.consentStart | date) + ' - ' + (consentCardVm.consent.consentEnd | date)"/></strong>
                         </p>
                     </div>
 
@@ -19,13 +19,13 @@
                                 <p class="m-b-xxs">Authorized to share:
                                 </p>
 
-                                <p><strong><span ng-repeat="discloseName in ConsentCardVm.consent.toDiscloseName" ng-bind="discloseName"/></strong>
+                                <p><strong><span ng-repeat="discloseName in consentCardVm.consent.toDiscloseName" ng-bind="discloseName"/></strong>
                                 </p>
                             </div>
                             <div class="col-sm-6">
                                 <p class="m-b-xxs">Sharing with:</p>
 
-                                <p><strong><span ng-repeat="madeToName in ConsentCardVm.consent.isMadeToName" ng-bind="madeToName"/></strong>
+                                <p><strong><span ng-repeat="madeToName in consentCardVm.consent.isMadeToName" ng-bind="madeToName"/></strong>
                                 </p>
                             </div>
                         </div>
@@ -37,31 +37,31 @@
             <div class="ibox-content modified">
                 <div class="btn-grey pp-block-text-bar pp-block-text-bar_sm pp-block-text-bar_default">
                     <span>
-                        Consent State: <span class="bold" ng-bind="ConsentCardVm.consentState() | uppercase"/>
+                        Consent State: <span class="bold" ng-bind="consentCardVm.consentState() | uppercase"/>
                     </span>
                 </div>
 
                 <div class="row">
                     <div class="col-md-6 m-b">
-                        <div ng-if="ConsentCardVm.isShareAll()">
+                        <div ng-if="consentCardVm.isShareAll()">
                             <h2 class="border-bottom-blue">Sharing all medical information:</h2>
                             All my medical information can be shared.
                         </div>
-                        <div ng-if="!ConsentCardVm.isShareAll()">
+                        <div ng-if="!consentCardVm.isShareAll()">
                             <h2 class="border-bottom-red">Medical Information NOT disclosed:</h2>
 
-                            <p><span ng-bind="ConsentCardVm.notDisclosedItems()"/></p>
+                            <p><span ng-bind="consentCardVm.notDisclosedItems()"/></p>
                         </div>
                     </div>
                     <div class="col-md-6 m-b">
                         <h2 class="border-bottom-blue">Share for following purposes:</h2>
 
-                        <p><span ng-bind="ConsentCardVm.purposeOfUseItems()"/></p>
+                        <p><span ng-bind="consentCardVm.purposeOfUseItems()"/></p>
                     </div>
                 </div>
 
                 <div>
-                    <button class="btn btn-primary dark-green" ng-click="ConsentCardVm.openManageConsentModal()">Manage
+                    <button class="btn btn-primary dark-green" ng-click="consentCardVm.openManageConsentModal()">Manage
                         Consent
                     </button>
                 </div>
