--- a/client/common/tmpl/navigation.tpl.html
+++ b/client/common/tmpl/navigation.tpl.html
@@ -37,7 +37,7 @@
             </li>
 
             <li ng-class="{active: $state.includes('fe.medicaldocuments')}" >
-                <a ui-sref="fe.medicaldocuments.info"><i class="fa fa-user-md"></i> <span class="nav-label">Medical Documents</span></a>
+                <a ui-sref="fe.medicaldocuments.info"><i class="fa fa-folder-open"></i> <span class="nav-label">Medical Documents</span></a>
             </li>
 
             <li ng-class="{active: $state.includes('fe.patient')}" ng-if="AppVm.healthInformationMenu" ng-click="AppVm.routeToHealthInformation()">
