--- a/client/index.html
+++ b/client/index.html
@@ -90,8 +90,7 @@
 <script src="app/provider/directives/providerDirectives.js" type="text/javascript"></script>
 <script src="app/provider/controllers/providerController.js" type="text/javascript"></script>
 <script src="app/home/home.module.js" type="text/javascript"></script>
-<script src="app/home/controllers/home.controller.js" type="text/javascript"></script>
-<script src="app/home/config/home.config.js" type="text/javascript"></script>
+<script src="app/home/home.config.js" type="text/javascript"></script>
 <script src="app/healthinformation/services/healthInformationService.js" type="text/javascript"></script>
 <script src="app/healthinformation/directives/healthInformationDirectives.js" type="text/javascript"></script>
 <script src="app/healthinformation/controllers/healthInformationController.js" type="text/javascript"></script>
