Rename access module to session module.
#7178 - Implement create consent UI

--- a/client/index.html
+++ b/client/index.html
@@ -85,6 +85,9 @@
 <script src="common/services/authInterceptorService.js" type="text/javascript"></script>
 <script src="common/filters/filters.js" type="text/javascript"></script>
 <script src="common/directives/directives.js" type="text/javascript"></script>
+<script src="app/session/session.module.js" type="text/javascript"></script>
+<script src="app/session/sessionLogin.controller.js" type="text/javascript"></script>
+<script src="app/session/session.config.js" type="text/javascript"></script>
 <script src="app/provider/services/providerServices.js" type="text/javascript"></script>
 <script src="app/provider/filters/providerFilters.js" type="text/javascript"></script>
 <script src="app/provider/directives/providerDirectives.js" type="text/javascript"></script>
@@ -111,7 +114,6 @@
 <script src="app/consent/consent.config.js" type="text/javascript"></script>
 <script src="app/config/config.js" type="text/javascript"></script>
 <script src="app/app.js" type="text/javascript"></script>
-<script src="app/access/controllers/login.js" type="text/javascript"></script>
 <!-- endangular -->
 
 </body>
