--- a/client/index.html
+++ b/client/index.html
@@ -81,13 +81,13 @@
     <!-- angular -->
 <script src="common/services/services.js" type="text/javascript"></script>
 <script src="common/services/notificationService.js" type="text/javascript"></script>
-<script src="common/services/authenticationService.js" type="text/javascript"></script>
-<script src="common/services/authInterceptorService.js" type="text/javascript"></script>
+<script src="common/services/authenticationInterceptor.service.js" type="text/javascript"></script>
+<script src="common/services/authentication.service.js" type="text/javascript"></script>
 <script src="common/filters/filters.js" type="text/javascript"></script>
 <script src="common/directives/directives.js" type="text/javascript"></script>
-<script src="app/session/session.module.js" type="text/javascript"></script>
-<script src="app/session/sessionLogin.controller.js" type="text/javascript"></script>
-<script src="app/session/session.config.js" type="text/javascript"></script>
+<script src="app/security/security.module.js" type="text/javascript"></script>
+<script src="app/security/securityLogin.controller.js" type="text/javascript"></script>
+<script src="app/security/security.config.js" type="text/javascript"></script>
 <script src="app/provider/services/providerServices.js" type="text/javascript"></script>
 <script src="app/provider/filters/providerFilters.js" type="text/javascript"></script>
 <script src="app/provider/directives/providerDirectives.js" type="text/javascript"></script>
