--- a/client/index.html
+++ b/client/index.html
@@ -86,7 +86,7 @@
 <script src="common/filters/filters.js" type="text/javascript"></script>
 <script src="common/directives/directives.js" type="text/javascript"></script>
 <script src="app/security/security.module.js" type="text/javascript"></script>
-<script src="app/security/securityLogin.controller.js" type="text/javascript"></script>
+<script src="app/security/login.controller.js" type="text/javascript"></script>
 <script src="app/security/security.config.js" type="text/javascript"></script>
 <script src="app/provider/services/providerServices.js" type="text/javascript"></script>
 <script src="app/provider/filters/providerFilters.js" type="text/javascript"></script>
