--- a/client/app/medicalDocuments/tmpl/medicalDocumentsInfo.tpl.html
+++ b/client/app/medicalDocuments/tmpl/medicalDocumentsInfo.tpl.html
@@ -4,7 +4,7 @@
             <div class="ibox float-e-margins">
                 <h3>Medical Document Management</h3>
                 <br/>
-                <p>Choose to upload your electronic Medical Documents.</p>
+                <p>Choose to upload your electronic Medical Documents. Or you may enter your medical information manually.</p>
             </div>
         </div>
     </div>
@@ -18,6 +18,14 @@
                 <p>
                     <a class="btn btn-primary dark-green" ui-sref="fe.medicaldocuments.upload">
                         Upload Medical Documents
+                    </a>
+                </p>
+                <p>
+                    If you do not have an existing electronic Medical Record, you may manually enter your medical information here.
+                </p>
+                <p>
+                    <a class="btn btn-primary dark-green" disabled>
+                        Manually Enter Medical Documents
                     </a>
                 </p>
             </div>
