--- a/client/index.html
+++ b/client/index.html
@@ -79,7 +79,6 @@
     <% }); %>
 
     <!-- angular -->
-<script src="common/services/services.js" type="text/javascript"></script>
 <script src="common/services/notificationService.js" type="text/javascript"></script>
 <script src="common/filters/filters.js" type="text/javascript"></script>
 <script src="common/directives/directives.js" type="text/javascript"></script>
@@ -87,7 +86,7 @@
 <script src="app/security/services/authenticationInterceptor.service.js" type="text/javascript"></script>
 <script src="app/security/services/authentication.service.js" type="text/javascript"></script>
 <script src="app/security/security.config.js" type="text/javascript"></script>
-<script src="app/security/login.controller.js" type="text/javascript"></script>
+<script src="app/security/Login.controller.js" type="text/javascript"></script>
 <script src="app/provider/services/providerServices.js" type="text/javascript"></script>
 <script src="app/provider/filters/providerFilters.js" type="text/javascript"></script>
 <script src="app/provider/directives/providerDirectives.js" type="text/javascript"></script>
@@ -97,6 +96,8 @@
 <script src="app/healthinformation/services/healthInformationService.js" type="text/javascript"></script>
 <script src="app/healthinformation/directives/healthInformationDirectives.js" type="text/javascript"></script>
 <script src="app/healthinformation/controllers/healthInformationController.js" type="text/javascript"></script>
+<script src="app/core/core.module.js" type="text/javascript"></script>
+<script src="app/core/services/services.js" type="text/javascript"></script>
 <script src="app/consent/consent.module.js" type="text/javascript"></script>
 <script src="app/consent/services/consent.service.js" type="text/javascript"></script>
 <script src="app/consent/directives/ppConsentTerm.directives.js" type="text/javascript"></script>
