Implement upload feature for Medical Documents
#7498 - Implement consent 2 share upload feature into patient portal (UI and Backend)

--- a/client/app/medicalDocuments/tmpl/medicalDocumentsUpload.tpl.html
+++ b/client/app/medicalDocuments/tmpl/medicalDocumentsUpload.tpl.html
@@ -29,6 +29,7 @@
                     <div class="form-group">
                         <label for="file">Clinical Document</label>
                         <input type="file" name="file" id="file"
+                               ng-model="MedicalDocumentsUploadVm.myFile"
                                file-model="myFile"/>
                     </div>
 
