--- a/client/index.html
+++ b/client/index.html
@@ -79,7 +79,6 @@
     <% }); %>
 
     <!-- angular -->
-<script src="common/services/notificationService.js" type="text/javascript"></script>
 <script src="common/filters/filters.js" type="text/javascript"></script>
 <script src="common/directives/directives.js" type="text/javascript"></script>
 <script src="app/security/security.module.js" type="text/javascript"></script>
@@ -98,6 +97,7 @@
 <script src="app/healthinformation/controllers/healthInformationController.js" type="text/javascript"></script>
 <script src="app/core/core.module.js" type="text/javascript"></script>
 <script src="app/core/services/services.js" type="text/javascript"></script>
+<script src="app/core/services/notification.service.js" type="text/javascript"></script>
 <script src="app/consent/consent.module.js" type="text/javascript"></script>
 <script src="app/consent/services/consent.service.js" type="text/javascript"></script>
 <script src="app/consent/directives/ppConsentTerm.directives.js" type="text/javascript"></script>
