Add a layout module. Move the common filters in the core module,
#7178 - Implement create consent UI

--- a/client/index.html
+++ b/client/index.html
@@ -79,7 +79,6 @@
     <% }); %>
 
     <!-- angular -->
-<script src="common/filters/filters.js" type="text/javascript"></script>
 <script src="common/directives/directives.js" type="text/javascript"></script>
 <script src="app/security/security.module.js" type="text/javascript"></script>
 <script src="app/security/services/authenticationInterceptor.service.js" type="text/javascript"></script>
@@ -90,6 +89,7 @@
 <script src="app/provider/filters/providerFilters.js" type="text/javascript"></script>
 <script src="app/provider/directives/providerDirectives.js" type="text/javascript"></script>
 <script src="app/provider/controllers/providerController.js" type="text/javascript"></script>
+<script src="app/layout/app.layout.module.js" type="text/javascript"></script>
 <script src="app/home/home.module.js" type="text/javascript"></script>
 <script src="app/home/home.config.js" type="text/javascript"></script>
 <script src="app/healthinformation/services/healthInformationService.js" type="text/javascript"></script>
@@ -98,6 +98,7 @@
 <script src="app/core/core.module.js" type="text/javascript"></script>
 <script src="app/core/services/services.js" type="text/javascript"></script>
 <script src="app/core/services/notification.service.js" type="text/javascript"></script>
+<script src="app/core/filters/filters.js" type="text/javascript"></script>
 <script src="app/consent/consent.module.js" type="text/javascript"></script>
 <script src="app/consent/services/consent.service.js" type="text/javascript"></script>
 <script src="app/consent/directives/ppConsentTerm.directives.js" type="text/javascript"></script>
