--- a/client/index.html
+++ b/client/index.html
@@ -98,7 +98,9 @@
 <script src="app/core/core.module.js" type="text/javascript"></script>
 <script src="app/core/services/services.js" type="text/javascript"></script>
 <script src="app/core/services/notification.service.js" type="text/javascript"></script>
-<script src="app/core/filters/filters.js" type="text/javascript"></script>
+<script src="app/core/filters/zip.filter.js" type="text/javascript"></script>
+<script src="app/core/filters/phone.filter.js" type="text/javascript"></script>
+<script src="app/core/filters/hasString.filter.js" type="text/javascript"></script>
 <script src="app/consent/consent.module.js" type="text/javascript"></script>
 <script src="app/consent/services/consent.service.js" type="text/javascript"></script>
 <script src="app/consent/directives/ppConsentTerm.directives.js" type="text/javascript"></script>
